<resources>
    <string name="app_name" translatable="false">Diaguard</string>
    <string name="app_facebook" translatable="false">http://www.facebook.com/diaguard.de</string>
    <string name="app_facebook_short" translatable="false">facebook.com/diaguard.de</string>
    <string name="app_homepage" translatable="false">http://www.diaguard.wordpress.com</string>
    <string name="app_homepage_short" translatable="false">diaguard.wordpress.com</string>
    <string name="app_mail" translatable="false">mailto:diaguard.de@gmail.com</string>
    <string name="app_mail_short" translatable="false">diaguard.de@gmail.com</string>
    <string name="app_sourcecode" translatable="false">https://github.com/Faltenreich/Diaguard</string>
    <string name="app_sourcecode_short" translatable="false">github.com/Faltenreich/Diaguard</string>
    <string name="food_source_common_provider" translatable="false">Schweizer Nährwertdatenbank</string>
    <string name="food_source_common_url" translatable="false">https://www.naehrwertdaten.ch</string>
    <string name="food_source_common_url_short" translatable="false">naehrwertdaten.ch</string>
    <string name="food_source_branded_provider" translatable="false">Open Food Facts</string>
    <string name="food_source_branded_url" translatable="false">http://world.openfoodfacts.org</string>
    <string name="food_source_branded_url_short" translatable="false">openfoodfacts.org</string>
    <string name="about">About</string>
    <string name="active">active</string>
    <string name="activity">Activity</string>
    <string name="all">All</string>
    <string name="alarm">Measure blood sugar</string>
    <string name="alarm_delete">Remove reminder</string>
    <string name="alarm_deleted">Removed reminder</string>
    <string name="alarm_desc">%s since the last measurement</string>
    <string name="alarm_desc_first">Thought about yet?</string>
    <string name="alarm_reminder">Reminder</string>
    <string name="alarm_reminder_none">No reminder</string>
    <string name="alarm_reminder_in">Reminder in</string>
    <string name="amount">Amount &#8230;</string>
    <string name="average">Average</string>
    <string name="average_symbol" translatable="false">Ø</string>
    <string name="back">Back</string>
    <string name="backup">Backup</string>
    <string name="backup_complete">Backup complete</string>
    <string name="backup_import">Backup is being restored &#8230;</string>
    <string name="backup_store">Store backup</string>
    <string name="backup_title">Choose backup</string>
    <string name="basal" translatable="false">Basal</string>
    <string name="bloodsugar">Blood Sugar</string>
    <string name="bolus">Bolus</string>
    <string name="bolus_no1">It is recommended not to inject a bolus.</string>
    <string name="bolus_no2">Instead some carbohydrate-heavy products should be consumed to prevent lower blood sugar level.</string>
    <string name="brand">Brand</string>
    <string name="calculator">Calculator</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="category_pin">Pin category</string>
    <string name="category_pin_confirm">%s has been pinned</string>
    <string name="category_unpin_confirm">%s has been unpinned</string>
    <string name="cleanup">Clean Up</string>
    <string name="cleanup_desc">This will permanently delete all data on and before the chosen date.</string>
    <string name="contact">Contact</string>
    <string name="correction">Correction</string>
    <string name="correction_value">Correction factor</string>
    <string name="correction_value_desc">Blood sugar reduction by 1 IE insulin</string>
    <string name="data">Data</string>
    <string name="date_select">Select date</string>
    <string name="day_next">Next day</string>
    <string name="day_previous">Previous day</string>
    <string name="delete">Delete</string>
    <string name="diastolic">Diastolic</string>
    <string name="diastolic_acronym" translatable="false">diast.</string>
    <string name="distribution">Distribution</string>
    <string name="drawer_close">Close Navigator</string>
    <string name="drawer_open">Open Navigator</string>
    <string name="edit">Edit</string>
    <string name="energy_acronym" translatable="false">kcal</string>
    <string name="energy_acronym_2" translatable="false">kJ</string>
    <string name="entries">Entries</string>
    <string name="entry">Entry</string>
    <string name="entry_added">Entry added</string>
    <string name="entry_count_per_day">Entries per day</string>
    <string name="entry_edit">Edit entry</string>
    <string name="entry_delete">Delete entry</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="entry_new">New entry</string>
    <string name="export">Export</string>
    <string name="export_complete">Saved to %s</string>
    <string name="export_progress">PDF is being created</string>
    <string name="export_stamp">Report generated on</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="first_visit">First visit?</string>
    <string name="first_visit_desc">Enter your first value</string>
    <string name="food">Food</string>
    <string name="food_add">Add food</string>
    <string name="food_add_desc">Add food</string>
    <string name="food_common_old">Common food</string>
    <string name="food_common">Common food</string>
    <string name="food_delete">Delete food</string>
    <string name="food_deleted">Food deleted</string>
    <string name="food_eaten_placeholder">%d eaten meals will be affected</string>
    <string name="food_edit">Edit food</string>
    <string name="food_new">New food</string>
    <string name="food_search">Search for food</string>
    <string name="format">Format</string>
    <string name="general">General</string>
    <string name="grams_acronym" translatable="false">g</string>
    <string name="milligrams_acronym" translatable="false">mg</string>
    <string name="grams_milliliters_acronym" translatable="false">g</string>
    <string name="hba1c">HbA1c</string>
    <string name="hba1c_estimated">Estimated HbA1c</string>
    <string name="hba1c_formula" translatable="false">HbA1c = 0,031 * %s 3-%s-%s + 2,393</string>
    <string name="home">Home</string>
    <string name="homepage">Website</string>
    <string name="hyper">Hyper</string>
    <string name="hyper_per_day">Hypers per day</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="hypo">Hypo</string>
    <string name="hypo_per_day">Hypos per day</string>
    <string name="import_">Import</string>
    <string name="imprint">Imprint</string>
    <string name="in">in</string>
    <string name="info" translatable="false">Info</string>
    <string name="ingredients">Ingredients</string>
    <string name="insulin">Insulin</string>
    <string name="interval">Interval</string>
    <string name="latest">[value] [unit] ago</string>
    <string name="latest_moments">Moments ago</string>
    <string name="licenses">Open-Source-Licenses</string>
    <string name="log">Log</string>
    <string name="mail">E-Mail</string>
    <string name="meal">Meal</string>
    <string name="meal_optional">Meal (Optional)</string>
    <string name="measurement_add">Add measurement</string>
    <string name="measurement_latest">Latest</string>
    <string name="measurements">Measured</string>
    <string name="name">Name</string>
    <string name="no_data">No data available</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="note_append">Append notes</string>
    <string name="nutriments">Nutriments</string>
    <string name="nutriments_per_100g">Nutriments per 100 g</string>
    <string name="ok">OK</string>
    <string name="overview">Overview</string>
    <string name="per">per</string>
    <string name="per_day">per day</string>
    <string name="placeholder" translatable="false">-</string>
    <string name="pressure">Blood Pressure</string>
    <string name="pressure_acronym">Blood Pr.</string>
    <string name="pulse">Pulse</string>
    <string name="remove_placeholder">Remove %s</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="startscreen">Start screen</string>
    <string name="statistics">Statistics</string>
    <string name="store_values">Store</string>
    <string name="systolic">Systolic</string>
    <string name="systolic_acronym" translatable="false">syst.</string>
    <string name="target_area">Target area</string>
    <string name="timeline">Timeline</string>
    <string name="to">to</string>
    <string name="today">Today</string>
    <string name="trend">Trend</string>
    <string name="try_again">Try again</string>
    <string name="undo">Undo</string>
    <string name="units">Units</string>
    <string name="weight">Weight</string>
    <string name="version">Version</string>
    <string name="vibration">Vibration</string>
    <string name="change_none">Constant</string>
    <string name="change_every_six_hours">Changes every time of day</string>
    <string name="change_every_four_hours">Changes every four hours</string>
    <string name="change_every_second_hour">Changes every second hour</string>
    <string name="change_every_hour">Changes every hour</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="carbohydrates_per_100g">Carbohydrates per 100 g</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="fat_saturated">Saturated fat</string>
    <string name="fiber">Fiber</string>
    <string name="proteins">Proteins</string>
    <string name="salt">Salt</string>
    <string name="sodium">Sodium</string>
    <string name="sugar">Sugar</string>
    <string-array name="time_rhythm">
        <item>@string/change_none</item>
        <item>@string/change_every_six_hours</item>
        <item>@string/change_every_four_hours</item>
        <item>@string/change_every_second_hour</item>
        <item>@string/change_every_hour</item>
    </string-array>
    <string name="pref_therapy_targets_target">Target value</string>
    <string name="pref_therapy_limits">Limits</string>
    <string name="pref_therapy_targets_highlight">Highlight limits?</string>
    <string name="pref_therapy_targets_highlight_desc">Highlights hyperglycemia red and hypoglycemia blue</string>
    <string name="pref_therapy_targets_hyperclycemia">Limit for hyperclycemia</string>
    <string name="pref_therapy_targets_hypoclycemia">Limit for hypoclycemia</string>
    <string name="tags">Tags</string>
    <string name="backup_desc">Store data in a backup file on a storage of your choice (No data will be sent automatically to external services)</string>
    <string name="import_desc">Restore data from a previously created backup file</string>
    <string name="show_branded_food">Search branded food</string>
    <string name="show_branded_food_desc">Includes thousands of packaged goods that are requested via network (May lead to duplicates, e.g. one product from different manufacturers)</string>
    <string name="theme">Color theme</string>
    <string name="therapy">Therapy</string>
    <string name="powered_by">Powered by</string>
    <string name="sourcecode">Source code</string>
    <string name="food_branded">Branded food</string>
    <string name="show_common_food">Show common food</string>
    <string name="show_common_food_desc">Includes hundreds of basic edibles bundled with the app</string>
    <string name="food_custom">Custom food</string>
    <string name="show_custom_food">Show custom food</string>
    <string name="show_custom_food_desc">Includes every food that has been added manually by the user</string>
    <string name="factors">Factors</string>
</resources>