<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/themes"
        android:entryValues="@array/themes_values"
        android:key="@string/preference_theme"
        android:title="@string/theme"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/startscreens"
        android:entryValues="@array/startscreens_values"
        android:key="@string/preference_start_screen"
        android:title="@string/startscreen"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory
        android:icon="@drawable/ic_alarm"
        android:title="@string/alarm_reminder">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_alarm_sound"
            android:title="@string/sound" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_alarm_vibration"
            android:title="@string/vibration" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_storage"
        android:title="@string/data">

        <Preference
            android:key="@string/preference_categories"
            android:title="@string/categories">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="@string/package_name"
                android:targetClass="com.faltenreich.diaguard.feature.category.CategoryListActivity"/>
        </Preference>

        <Preference
            android:key="@string/preference_tags"
            android:title="@string/tags">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="@string/package_name"
                android:targetClass="com.faltenreich.diaguard.feature.tag.TagListActivity"/>
        </Preference>

        <Preference
            android:title="@string/food"
            app:fragment="com.faltenreich.diaguard.feature.preference.food.FoodPreferenceFragment" />

        <com.faltenreich.diaguard.feature.preference.backup.BackupExportPreference
            android:key="@string/preference_backup"
            android:summary="@string/backup_desc"
            android:title="@string/backup" />

        <com.faltenreich.diaguard.feature.preference.backup.BackupImportPreference
            android:key="@string/preference_import"
            android:summary="@string/import_desc"
            android:title="@string/import_" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_user"
        android:title="@string/therapy">

        <Preference
            android:title="@string/units"
            app:fragment="com.faltenreich.diaguard.feature.preference.therapy.UnitPreferenceFragment" />

        <Preference
            android:title="@string/pref_therapy_limits"
            app:fragment="com.faltenreich.diaguard.feature.preference.therapy.LimitPreferenceFragment" />

        <Preference
            android:title="@string/factors"
            app:fragment="com.faltenreich.diaguard.feature.preference.therapy.FactorPreferenceFragment" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_chat"
        android:title="@string/contact">

        <Preference
            android:summary="@string/app_homepage_short"
            android:title="@string/homepage">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_homepage" />
        </Preference>

        <Preference
            android:summary="@string/app_facebook_short"
            android:title="@string/facebook">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_facebook" />
        </Preference>

        <Preference
            android:summary="@string/app_mail_short"
            android:title="@string/mail">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_mail" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_oss"
        android:title="@string/about">

        <Preference
            android:summary="@string/app_sourcecode_short"
            android:title="@string/sourcecode">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_sourcecode" />
        </Preference>

        <com.faltenreich.diaguard.feature.preference.license.LicensePreference android:title="@string/licenses" />

        <com.faltenreich.diaguard.feature.preference.about.AboutPreference android:title="@string/imprint" />

        <Preference
            android:key="@string/preference_version"
            android:title="@string/version" />

    </PreferenceCategory>

</PreferenceScreen>