<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/food">

    <PreferenceCategory
        android:icon="@drawable/ic_user"
        android:title="@string/food_custom">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_food_show_custom"
            android:summary="@string/show_custom_food_desc"
            android:title="@string/show_custom_food" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/food_common"
        android:icon="@drawable/ic_nature">

        <Preference
            android:summary="@string/powered_by"
            android:title="@string/food_source_common_provider">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/food_source_common_url" />
        </Preference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_food_show_common"
            android:summary="@string/show_common_food_desc"
            android:title="@string/show_common_food" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/food_branded"
        android:icon="@drawable/ic_factory">

        <Preference
            android:summary="@string/powered_by"
            android:title="@string/food_source_branded_provider">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/food_source_branded_url" />
        </Preference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_food_show_branded"
            android:summary="@string/show_branded_food_desc"
            android:title="@string/show_branded_food" />

    </PreferenceCategory>

</PreferenceScreen>