<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider_small"
    android:orientation="vertical"
    android:showDividers="middle">

    <com.faltenreich.diaguard.shared.view.edittext.StickyHintInputView
        android:id="@+id/bolus_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bolus"
        android:inputType="numberDecimal"
        app:startIconDrawable="@drawable/ic_category_insulin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_medium"
        android:orientation="horizontal"
        android:showDividers="middle">

        <!-- FIXME: Move to basal_input_field on forward -->
        <com.faltenreich.diaguard.shared.view.edittext.StickyHintInputView
            android:id="@+id/correction_input_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/correction"
            android:inputType="numberDecimal|numberSigned" />

        <com.faltenreich.diaguard.shared.view.edittext.StickyHintInputView
            android:id="@+id/basal_input_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/basal"
            android:inputType="numberDecimal" />

    </LinearLayout>

</LinearLayout>