<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/CardViewNoMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:listDivider"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout style="@style/LayoutRow">

                    <ImageView
                        android:id="@+id/category_image_view"
                        style="@style/LayoutRowImage"
                        android:contentDescription="@string/category"
                        app:tint="?iconColorPrimary"
                        tools:src="@drawable/ic_log" />

                    <LinearLayout
                        style="@style/LayoutRowItem"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/category_spinner"
                            style="@style/LayoutRowText" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout style="@style/LayoutRow">

                    <ImageView
                        style="@style/LayoutRowImage"
                        android:contentDescription="@string/interval"
                        app:srcCompat="@drawable/ic_time"
                        app:tint="?iconColorPrimary" />

                    <LinearLayout
                        style="@style/LayoutRowItem"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/interval_spinner"
                            style="@style/LayoutRowText" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            style="@style/Padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Overview -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    style="@style/Padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/BoxRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/average"
                        android:textColor="?colorPrimary" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow style="@style/BoxRow">

                            <TextView
                                android:id="@+id/average_unit_label"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3" />

                            <TextView
                                android:id="@+id/average_value_label"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/placeholder"
                                android:textColor="?android:attr/textColorPrimary" />

                        </TableRow>

                        <TableRow style="@style/BoxRow">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:text="@string/entry_count_per_day" />

                            <TextView
                                android:id="@+id/measurement_count_average_label"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/placeholder"
                                android:textColor="?android:attr/textColorPrimary" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/hypergylcemia_count_average_layout"
                            style="@style/BoxRow">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:text="@string/hyper_per_day" />

                            <TextView
                                android:id="@+id/hypergylcemia_count_average_label"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/placeholder"
                                android:textColor="?android:attr/textColorPrimary" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/hypogylcemia_count_average_layout"
                            style="@style/BoxRow">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:text="@string/hypo_per_day" />

                            <TextView
                                android:id="@+id/hypogylcemia_count_average_label"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/placeholder"
                                android:textColor="?android:attr/textColorPrimary" />

                        </TableRow>

                    </TableLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Trend -->
            <androidx.cardview.widget.CardView
                android:id="@+id/trend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    style="@style/Padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/BoxRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:text="@string/trend"
                        android:textColor="?colorPrimary" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/trend_chart_view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_chart_height_detailed"
                        android:orientation="horizontal" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Distribution -->
            <androidx.cardview.widget.CardView
                android:id="@+id/distribution_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    style="@style/Padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/BoxRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:text="@string/distribution"
                        android:textColor="?colorPrimary" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/distribution_chart_view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/pie_chart_height"
                        android:orientation="horizontal" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>